--- a/widgets/pluginlist/partials/_toolbar-buttons.htm
+++ b/widgets/pluginlist/partials/_toolbar-buttons.htm
@@ -1,4 +1,4 @@
-<button type="button" class="btn btn-primary oc-icon-plus"
+<button type="button" class="btn btn-primary oc-icon-plus" data-builder-command="plugin:cmdCreatePlugin"
     ><?= e(trans('rainlab.builder::lang.plugin.add')) ?></button>
 
 <?php $mode = $this->getFilterMode(); ?>
