--- a/widgets/pluginlist/partials/_plugin-list.htm
+++ b/widgets/pluginlist/partials/_plugin-list.htm
@@ -1,8 +1,9 @@
 <div class="layout-absolute">
     <div class="control-scrollpad" data-control="scrollpad">
         <div class="scroll-wrapper">
-            <div class="control-filelist hero snippet-list" 
+            <div class="control-filelist hero single-level" 
                 data-control="filelist"
+                data-ignore-item-click="true"
                 id="<?= $this->getId('plugin-list') ?>"
             >
                 <?= $this->makePartial('items', ['items'=>$data]) ?>
