Finished plugin management (create, edit), setting the active plugin, started the table management implementation, minor refactoring in the entity client-side classes.

--- a/widgets/databasetablelist/partials/_table-list.htm
+++ b/widgets/databasetablelist/partials/_table-list.htm
@@ -1,10 +1,10 @@
 <div class="layout-absolute">
     <div class="control-scrollpad" data-control="scrollpad">
         <div class="scroll-wrapper">
-            <div class="control-filelist hero single-level" 
+            <div class="control-filelist single-line" 
                 data-control="filelist"
                 data-ignore-item-click="true"
-                id="<?= $this->getId('plugin-list') ?>"
+                id="<?= $this->getId('database-table-list') ?>"
             >
                 <?= $this->makePartial('items', ['items'=>$items]) ?>
             </div>
