--- a/widgets/pluginlist/partials/_body.htm
+++ b/widgets/pluginlist/partials/_body.htm
@@ -2,7 +2,7 @@
 <div class="layout-row">
     <div class="layout-cell">
         <div class="layout-relative">
-            <?= $this->makePartial('plugin-list', ['data'=>$data]) ?>
+            <?= $this->makePartial('plugin-list', ['items'=>$items]) ?>
         </div>
     </div>
 </div>
