Minor reorganization of the server-side index behaviors, implementing the table editing feature.

--- a/widgets/databasetablelist/partials/_items.htm
+++ b/widgets/databasetablelist/partials/_items.htm
@@ -6,7 +6,7 @@
             <li class="item" 
                 data-id="<?= e($dataId) ?>" 
             >
-                <a href="#" data-builder-command="database:cmdOpenTableActive" data-id="<?= e($dataId) ?>">
+                <a href="#" data-builder-command="databaseTable:cmdOpenTable" data-id="<?= e($dataId) ?>">
                     <span class="title"><?= e($table) ?></span>
                     <span class="borders"></span>
                 </a>
