Partially implemented the database table management functionality. Some refactoring of the existing code.

--- a/behaviors/indexdatabasetableoperations/partials/_tab.htm
+++ b/behaviors/indexdatabasetableoperations/partials/_tab.htm
@@ -4,4 +4,5 @@
     'data-window-close-confirm' => e(trans('backend::lang.form.confirm_tab_close'))
 ]) ?>
     <?= $form->render() ?>
+    <input type="hidden" name="plugin_db_prefix" value="<?= e($pluginDbPrefix) ?>">
 <?= Form::close() ?>
