--- a/widgets/databasetablelist/partials/_items.htm
+++ b/widgets/databasetablelist/partials/_items.htm
@@ -1,12 +1,12 @@
 <?php if ($items): ?>
     <ul>
         <?php foreach ($items as $table):
-            $dataId = 'table-'.$table;
+            $dataId = 'databaseTable-'.$table;
         ?>
             <li class="item" 
                 data-id="<?= e($dataId) ?>" 
             >
-                <a href="#" data-builder-command="databaseTable:cmdOpenTable" data-id="<?= e($dataId) ?>">
+                <a href="#" data-builder-command="databaseTable:cmdOpenTable" data-id="<?= e($table) ?>">
                     <span class="title"><?= e($table) ?></span>
                     <span class="borders"></span>
                 </a>
