--- a/widgets/databasetablelist/partials/_toolbar.htm
+++ b/widgets/databasetablelist/partials/_toolbar.htm
@@ -1,6 +1,6 @@
 <div class="layout-row min-size panel-contents">
-    <div class="layout control-toolbar">
-        <div class="layout-cell width-fix toolbar-item">
+    <div class="control-toolbar toolbar-padded">
+        <div class="toolbar-item" data-calculate-width>
             <div class="btn-group">
                 <button type="button" class="btn btn-primary oc-icon-plus last"
                     data-builder-command="databaseTable:cmdCreateTable"
@@ -15,12 +15,16 @@
             </div>
         </div>
         <div class="relative toolbar-item loading-indicator-container size-input-text">
-            <input placeholder="<?= e(trans('rainlab.builder::lang.database.search')) ?>" type="text" name="search" value="<?= e($this->getSearchTerm()) ?>" 
+            <input
+                type="text"
+                name="search"
+                value="<?= e($this->getSearchTerm()) ?>"
                 class="form-control icon search" autocomplete="off"
+                placeholder="<?= e(trans('rainlab.builder::lang.database.search')) ?>"
                 data-track-input
                 data-load-indicator
                 data-load-indicator-opaque
-                data-request="<?= $this->getEventHandler('onSearch') ?>" 
+                data-request="<?= $this->getEventHandler('onSearch') ?>"
             />
         </div>
     </div>
