Implemented table renaming, closing tabs, opening existing columns, deleting tables, unique table name validation, fixed several bugs. Implementing new approach for generating the tables up and down code, in progress.

--- a/behaviors/indexdatabasetableoperations/partials/_migration-popup-form.htm
+++ b/behaviors/indexdatabasetableoperations/partials/_migration-popup-form.htm
@@ -41,5 +41,9 @@
                 <?= e(trans('backend::lang.form.cancel')) ?>
             </button>
         </div>
+
+        <script>
+            $.oc.builder.indexController.triggerCommand('databaseTable:cmdUnModifyForm')
+        </script>
     <?php endif ?>
 <?= Form::close() ?>
