--- a/widgets/databasetablelist/partials/_widget-contents.htm
+++ b/widgets/databasetablelist/partials/_widget-contents.htm
@@ -1,7 +1,7 @@
 <div class="layout-row min-size panel-contents">
     <div class="sidepanel-content-header">
         <?php if ($pluginVector): ?>
-            <?= e($pluginVector->getPluginName()) ?>
+            <?= e(trans($pluginVector->getPluginName())) ?>
         <?php else: ?>
             <?= e(trans('rainlab.builder::lang.common.plugin_not_selected')) ?>
         <?php endif ?>
