--- a/widgets/modellist/partials/_model-list.htm
+++ b/widgets/modellist/partials/_model-list.htm
@@ -4,6 +4,7 @@
             <div class="control-filelist single-line" 
                 data-control="filelist"
                 data-ignore-item-click="true"
+                data-group-status-handler="<?= $this->getEventHandler('onGroupStatusUpdate') ?>"
                 id="<?= $this->getId('plugin-model-list') ?>"
             >
                 <?= $this->makePartial('items', ['items'=>$items]) ?>
