--- a/assets/less/builder.less
+++ b/assets/less/builder.less
@@ -1,7 +1,12 @@
 @import "../../../../../modules/backend/assets/less/core/boot.less";
 
+@builder-control-border-color: #bdc3c7;
+@builder-control-text-color: #95a5a6;
+@builder-hover-color: #2581b8;
+
 @import "controlpalette.less";
 @import "buildingarea.less";
+@import "controlblueprint.less";
 
 .control-filelist ul li.group.model > h4 a:after {
     content: @random;
