--- a/assets/less/controlpalette.less
+++ b/assets/less/controlpalette.less
@@ -11,7 +11,7 @@ ul.builder-control-palette {
     white-space: nowrap;
 
     li {
-        margin: 8px;
+        margin: 8px 0 8px 8px;
         color: #555555;
         padding: 10px;
         .border-radius(4px);
@@ -26,7 +26,10 @@ ul.builder-control-palette {
 
         i {
             margin-right: 5px;
-            font-size: 14px
+            font-size: 18px;
+            position: relative;
+            color: #888888;
+            top: 2px;
         }
 
         display: inline-block;
