--- a/formwidgets/formbuilder/partials/_controllist.htm
+++ b/formwidgets/formbuilder/partials/_controllist.htm
@@ -1,10 +1,10 @@
 <ul class="builder-control-list">
     <li 
         class="placeholder span-left"
-        data-span="auto"
+        data-builder-span="auto"
         data-builder-placeholder="true"
         data-builder-loading-text="<?= e(trans('rainlab.builder::lang.form.loading')) ?>"
     >
         <i class="icon-plus-circle"></i><?= e(trans('rainlab.builder::lang.form.drop_control_here')) ?>
-    </li>
+    </li><li class="clear-row"></li>
 </ul>
