--- a/assets/less/buildingarea.less
+++ b/assets/less/buildingarea.less
@@ -5,21 +5,26 @@
         padding: 20px;
         list-style: none;
         li {
-            padding: 10px 12px;
             margin-bottom: 20px;
-            cursor: default;
+            cursor: pointer;
             .user-select(none);
 
             &.placeholder, &.loading-control {
+                cursor: default;
+                padding: 10px 12px;
                 position: relative;
                 text-align: center;
-                border: 2px solid #f5f5f7;
+                border: 2px solid #dde0e2;
                 .border-radius(4px);
                 color: #dae0e0;
 
                 i {
                     margin-right: 8px;
                 }
+            }
+
+            &.clear-row {
+                display: none;
             }
 
             &.loading-control {
@@ -47,8 +52,8 @@
             }
 
             &.drag-over {
-                color: #2581b8;
-                border-color: #2581b8;
+                color: @builder-hover-color;
+                border-color: @builder-hover-color;
             }
 
             &.span-full {
@@ -68,6 +73,31 @@
                 clear: right;
             }
 
+            &.span-right + li.clear-row {
+                display: block;
+                clear: both;
+            }
         }
+    }
+
+    .builder-control-label {
+        margin-bottom: 10px;
+        color: #555555;
+        font-size: 14px;
+        font-weight: 600;
+    }
+
+    .builder-control-label:empty {
+        margin-bottom: 0;
+    }
+
+    .builder-control-comment-above, 
+    .builder-control-comment-below {
+        color: #737373;
+        font-size: 12px;
+    }
+
+    li:not(.placeholder):not(.loading-control):hover * {
+        color: @builder-hover-color!important;
     }
 }
