--- a/formwidgets/formbuilder/partials/_buildingarea.htm
+++ b/formwidgets/formbuilder/partials/_buildingarea.htm
@@ -4,8 +4,8 @@
             <div class="layout-absolute builder-building-area">
                 <div class="control-scrollpad" data-control="scrollpad">
                     <div class="scroll-wrapper">
-                        <div class="">
-                            <?= $this->makePartial('container', ['fieldsConfiguration'=>[]]) ?>
+                        <div data-root-control-wrapper>
+                            <?= $this->makePartial('controlcontainer', ['fieldsConfiguration'=>[]]) ?>
                         </div>
                     </div>
                 </div>
