--- a/formwidgets/formbuilder/partials/_controllist.htm
+++ b/formwidgets/formbuilder/partials/_controllist.htm
@@ -1,4 +1,11 @@
-<ul class="builder-control-list">
+<ul class="builder-control-list" data-control-list="<?= e($listName) ?>">
+    <?php
+
+        // Render other controls here. Each li should have:
+        // - data-inspectable
+        // - data-control-type
+    ?>
+
     <li 
         class="placeholder span-left"
         data-builder-span="auto"
