Implementing form saving, loading and deleting. In progress.

--- a/behaviors/indexdatabasetableoperations/partials/_tab.htm
+++ b/behaviors/indexdatabasetableoperations/partials/_tab.htm
@@ -2,7 +2,8 @@
     'class' => 'layout',
     'data-change-monitor' => 'true',
     'data-window-close-confirm' => e(trans('backend::lang.form.confirm_tab_close')),
-    'data-entity' => 'database'
+    'data-entity' => 'database',
+    'onsubmit' => 'return false'
 ]) ?>
     <?= $form->render() ?>
     <input type="hidden" name="plugin_code" value="<?= e($pluginCode) ?>">
