--- a/behaviors/indexmodelformoperations/partials/_tab.htm
+++ b/behaviors/indexmodelformoperations/partials/_tab.htm
@@ -2,9 +2,12 @@
     'class' => 'layout',
     'data-change-monitor' => 'true',
     'data-window-close-confirm' => e(trans('backend::lang.form.confirm_tab_close')),
-    'data-entity' => 'models'
+    'data-entity' => 'models',
+    'onsubmit' => 'return false'
 ]) ?>
     <?= $form->render() ?>
     <input type="hidden" name="plugin_code" value="<?= e($pluginCode) ?>">
     <input type="hidden" name="file_name" value="<?= e($fileName) ?>">
+    <input type="hidden" name="model_class" value="<?= e($modelClass) ?>">
+
 <?= Form::close() ?>
