--- a/assets/css/builder.css
+++ b/assets/css/builder.css
@@ -228,6 +228,10 @@ ul.builder-control-palette li i {
   content: "\f00b";
   top: 10px;
 }
+.control-filelist ul li.group > ul > li.group > ul > li > a {
+  padding-left: 73px;
+  margin-left: -20px;
+}
 html.gecko .control-filelist ul li.group {
   margin-right: 10px;
 }
