--- a/assets/less/builder.less
+++ b/assets/less/builder.less
@@ -22,6 +22,11 @@
     top: 10px;
 }
 
+.control-filelist ul li.group > ul > li.group > ul > li > a {
+    padding-left: 73px;
+    margin-left: -20px;
+}
+
 html.gecko .control-filelist ul li.group {
     margin-right: 10px;
 }
